fix(#781): content_visibility: false

--- a/source/css/first.styl
+++ b/source/css/first.styl
@@ -1,17 +1,19 @@
 #safearea {
   display: none
 }
-// https://web.dev/content-visibility/
-// https://www.caniuse.com/?search=content-visibility
-/*
-  * Workaround for Chrome bug, part 1
-  * Chunk rendering for all but the first article.
-  * /layout/_partial/scripts/content-visibility-scroll-fix.ejs
-*/
-.post-story + .post-story{
-  content-visibility: auto;
-  contain-intrinsic-size: 10px 500px;
-}
+
+if hexo-config('content_visibility')
+  // https://web.dev/content-visibility/
+  // https://www.caniuse.com/?search=content-visibility
+  /*
+    * Workaround for Chrome bug, part 1
+    * Chunk rendering for all but the first article.
+    * /layout/_partial/scripts/content-visibility-scroll-fix.ejs
+  */
+  .post-story + .post-story{
+    content-visibility: auto;
+    contain-intrinsic-size: 10px 500px;
+  }
 
 @import '_defines/*'
 
